kubernetes/deploy/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonpakhru-kubernetes-service
  namespace: sonpakhru
  labels:
    app: sonpakhru-kubernetes
    app.kubernetes.io/name: sonpakhru-kubernetes-service
    app.kubernetes.io/instance: sonpakhru-kubernetes
    app.kubernetes.io/component: service-frontend
    app.kubernetes.io/part-of: sonpakhru-kubernetes
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: spk8s
    name: spk8s
  type: ClusterIP
  selector:
    app: sonpakhru-kubernetes
